implement working GUI